# labevent

./: .gitmodules  pyproject.toml  requirements.txt
data/callbacks/: results.csv  results2024-04-02.csv
data/refined/: index.csv  patients.csv  tests.csv
data/refined/wide/: blood_chemistry_13.csv  blood_chemistry_17.csv
notebooks/: experiments.ipynb  libs.ipynb  wide_format_EDA.ipynb
src/: __init__.py  data_preparation.ipynb  experiments.ipynb  fp.py  imputation.py  initializer.py  libs.ipynb  loss.py  metrics.py  misc.py  missing_sampler.py  pipeline.py  sublime.py  utils.py  visual.ipynb  wide_format_EDA.ipynb
