[tool.poetry]
name = "labevent"
version = "0.1.0"
description = ""
authors = ["leostre <strelllleo@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
